Changes to Version 2.2-0

  o New RMarkdown document, usable when pandoc (and possibly LaTeX) are installed; can be compiled to HTML, PDF, or Word file.

  o New "Tools > Install auxiliary software" menu for installing Java, pandoc, and LaTeX.

  o Added concentration ellipses to scatterplot and scatterplot-matrix dialogs (suggestion of Kosar Karimi Pour).

Changes to Version 2.1-7

  o New simplified Chinese translation (contributed by Shulin Yang).

  o Corrections to Catalan translation (courtesy of Manel Salamero).

Changes to Version 2.1-6

  o Prevent overriding S3 methods in standard packages (request of Brian Ripley).

Changes to Version 2.1-5

  o Updated Catalan (thanks to Manel Salamero) and Slovenian (thanks to Matjaz Jeran) translations.

  o Export RappP() and mavericksP() (request of Erich Neuwirth).

  o Fixed bug in labeling values of discrete probability mass functions (reported by Vasileios Giagos).

Changes to Version 2.1-4

  o Moved knitr and markdown packages to Suggests: to accommodate Debian (request of Dirk Eddelbuettel).

  o New Galician translation, courtesy of Anton Meixome.

  o Updated  translations (with thanks): Brazilian Portuguese (Marilia Sa Carvalho and Adriano Azevedo-Filho); Catalan (Manel Salamero); Indonesian (I Made Tirta); Japanese (Takaharu Araki).

  o Small interface improvements.

Changes to Version 2.1-3

  o Updated translations (with thanks): Basque (Jose Ramon Rueda); Polish (Lukasz Daniel); Russian (Alexey Shipunov); Slovenian (Matjaz Jeran).

  o Fixed random-data-generation dialogs so that code works in R Markdown file.

  o Fixed custom contrasts in define-contrasts dialog.

  o Fixed conversion of multiple numeric variables to factors (bug reported by Pedro Barbetta).

  o Added dialog to control R.app app nap under OS X Mavericks.

Changes to Version 2.1-2
