@@ -1,6 +1,6 @@
 Package: Rcmdr
 Version: 2.2-0
-Date: 2015/02/16
+Date: 2015/03/07
 Title: R Commander
 Authors@R: c(person("John", "Fox", role = c("aut", "cre"), email = "jfox@mcmaster.ca"),
     person("Milan", "Bouchet-Valat", role = "aut"),
