@@ -13,7 +13,7 @@ user interface) for R, based on the tcltk package.
 \tabular{ll}{
 Package: \tab Rcmdr\cr
 Version: \tab 2.2-0\cr
-Date: \tab 2015/02/16\cr
+Date: \tab 2015/03/07\cr
 Depends: \tab R (>= 3.0.0), grDevices, utils, splines, RcmdrMisc (>= 1.0-2), 
   car (>= 2.0-21)\cr
 Imports: \tab tcltk, tcltk2 (>= 1.2-6), markdown, knitr, abind\cr
